Fix grid alignment using omega mixin, make button mixin

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,6 +5,17 @@ $max-width: 50em;
 
 $borderColor: #ddd;
 $headerColor: darken(#c29133, 10%);
+$linkColor: #2c5999;
+
+@mixin button($color: $linkColor) {
+  color: $color;
+  padding: 0.5em 1.5em;
+  border: 1px solid $color;
+  border-radius: 4px;
+  a {
+    color: $color;
+  }
+}
 
 body {
   margin: 0;
@@ -42,6 +53,10 @@ h3 {
   @include span-columns(8);
   @include shift(2);
 }
+.callout {
+  margin-top: 2em;
+  text-align: center;
+}
 
 footer .grid {
   border-top: 1px solid $borderColor;
@@ -64,15 +79,9 @@ body > section {
 
   .links {
     li {
+      @include button(#fff);
       display: inline-block;
-      padding: 0.5em 1.5em;
-      border: 1px solid #fff;
-      border-radius: 4px;
       margin-right: 0.5em;
-
-      a {
-        color: #fff;
-      }
     }
   }
 }
@@ -87,6 +96,7 @@ body > section {
     @include clearfix;
     li {
       @include span-columns(6);
+      @include omega(2n);
     }
   }
 }
@@ -108,6 +118,8 @@ body > section {
     @include clearfix;
     > li {
       @include span-columns(6);
+      @include omega(2n);
+      margin-bottom: 1em;
 
       .video-wrapper {
         position: relative;
@@ -124,6 +136,9 @@ body > section {
         }
       }
     }
+  }
+  .callout a {
+    @include button;
   }
 }
 #lessons {
